syntax = "proto3";

option csharp_namespace = "Web_Server";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
//  rpc StartTalking (HelloRequest) returns (HelloReply);
  rpc StartTalking (stream ChatMessage) returns (stream ChatMessage);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string guid = 2;
  string message = 3;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  string guid = 2; 
}

message ChatMessage {
  string guid = 1;
  string message = 2;
  string time = 3;
}